--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -1,6 +1,4 @@
-.nav-hero {
-    background-color: $primary;
-    position: relative;
+.home {
 
     &::after {
         content: "";
@@ -11,26 +9,60 @@
         top: -20%;
         right: -5%;
         transform: rotate(45deg);
-        z-index: 1;
         border-radius: 40%;
+
+        @media (max-width: 1200px) {
+            width: 100%;
+            height: 100%;
+            border-radius: 0;
+            transform: none;
+            top: 0;
+            left: 0;
+            background: rgb(13, 75, 139);
+            background: linear-gradient(90deg, rgba(13, 75, 139, 1) 0%, rgba(13, 75, 139, 1) 32%, rgba(13, 75, 139, 0.9360994397759104) 61%, rgba(13, 75, 139, 0.768032212885154) 94%);
+        }
+    }
+}
+
+.nav-hero {
+    background-color: $primary;
+    position: relative;
+
+    .bg-img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        object-fit: cover;
+
+        @media (min-width: 1200px) {
+            display: none;
+        }
     }
 
     .hero {
 
         @media (max-width: 1200px) {
-            padding: 5rem 0 6rem;
+            padding: 2rem 0 3rem;
         }
 
         .info-div {
             padding: 4rem 0 4rem;
             width: 50%;
+            position: relative;
+
+            @media (max-width:1200px) {
+                width: 100%;
+                z-index: 3;
+                padding: 2rem 0 3rem;
+            }
 
             @media (max-width: 992px) {
                 padding: 0rem 0 4rem;
             }
 
-            @media (max-width: 992px) {
-                width: 100%;
+            @media (max-width: 768px) {
+                padding: 0rem 0rem 0rem;
             }
 
             h1 {
@@ -38,6 +70,7 @@
                 margin-bottom: 2.5rem;
                 color: $white;
                 text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+                z-index: 3;
 
                 @media (max-width: 768px) {
                     font-size: 35px;
@@ -53,6 +86,7 @@
                 color: $white;
                 width: 100%;
                 text-shadow: black 0.1em 0.1em 0.2em;
+                z-index: 3;
 
                 @media (max-width: 768px) {
                     font-size: 16px;
@@ -66,12 +100,10 @@
 
         .img-div {
             width: 50%;
-
-            position: relative;
             z-index: 2;
 
-            @media (max-width: 992px) {
-                width: 100%;
+            @media (max-width:1200px) {
+                width: 0%;
             }
 
             .hero-img {
@@ -81,6 +113,11 @@
                 transform: scaleX(-1);
                 z-index: 2;
 
+                @media (max-width: 1200px) {
+                    //   height: 90%;
+                    margin-top: auto;
+                }
+
                 @media (max-width: 992px) {
                     max-height: 20rem;
                 }
@@ -88,9 +125,27 @@
         }
 
         .ratings {
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
             margin-top: 4rem;
+
+            @media (max-width: 1400px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            @media (max-width: 1200px) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            @media (max-width: 768px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            @media (max-width: 450px) {
+                grid-template-columns: repeat(1, 1fr);
+                margin-top: 1rem;
+            }
 
             .column {
                 display: flex;
@@ -137,6 +192,30 @@
     position: relative;
     padding-top: 10%;
 
+    @media (max-width: 992px) {
+        padding-top: 15%;
+    }
+
+    @media (max-width: 768px) {
+        padding-top: 20%;
+    }
+
+    @media (max-width: 576px) {
+        padding-top: 30%;
+    }
+
+    @media (max-width: 450px) {
+        padding-top: 40%;
+    }
+
+    @media (max-width: 360px) {
+        padding-top: 50%;
+    }
+
+    @media (max-width: 300px) {
+        padding-top: 90%;
+    }
+
     .topic-box {
         background-color: $primary;
         position: absolute;
@@ -147,19 +226,20 @@
         z-index: -1;
         border-radius: 4px;
 
-        .sub-header-service {
-            font-size: 21px;
-            font-weight: 500;
-            color: $secondary;
-            z-index: 3;
-            margin-bottom: 0.5rem;
+        @media (max-width: 992px) {
+            width: 60%;
+            height: 35%;
         }
 
-        .header-service {
-            color: $white;
-            z-index: 3;
-            font-size: 40px;
-            font-weight: 600;
+        @media (max-width: 768px) {
+            width: 80%;
+            height: 20%;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        @media (max-width: 576px) {
+            width: 100%;
         }
     }
 
@@ -175,9 +255,22 @@
         background-color: #ffffff;
         padding: 1rem 2rem;
 
+        @media (max-width: 992px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+            width: 100%;
+        }
+
         .service {
             padding: 1.5rem 2rem;
             border-radius: 12px;
+
+            @media (max-width: 576px) {
+                padding: 1rem 0.5rem;
+            }
 
             // box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
             .img-div {
@@ -218,6 +311,18 @@
         z-index: -1;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
+
+        @media (max-width: 1200px) {
+            width: 95%;
+        }
+
+        @media (max-width: 1200px) {
+            width: 97%;
+        }
+
+        @media (max-width: 576px) {
+            width: 100%;
+        }
     }
 
     &::after {
@@ -237,8 +342,17 @@
         justify-content: space-between;
         align-items: center;
 
+        @media (max-width: 1200px) {
+            flex-direction: column;
+            gap: 3rem;
+        }
+
         .info-div {
             width: 49%;
+
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
 
             p {
                 color: $white;
@@ -246,10 +360,11 @@
             }
 
             ul {
-                list-style-type: "🟠";
+                list-style-type: "🖌️";
                 color: $white;
                 padding-left: 1.3rem;
-                li{
+
+                li {
                     line-height: 30px;
                     padding-left: 0.5rem;
                 }
@@ -259,37 +374,50 @@
         .img-div {
             width: 49%;
 
+            @media (max-width: 1200px) {
+                width: 100%;
+            }
+
             img {
                 width: 100%;
                 border-radius: 4px;
-                transform: scaleX(-1)
+                transform: scaleX(-1);
+                border-radius: 8px;
+
+                @media (max-width: 1200px) {
+                    height: 25rem;
+                    object-fit: cover;
+                }
             }
         }
     }
 }
 
 // Stats
-.stats{
+.stats {
     background-color: $primary;
     padding: 4rem 0;
-    .flex{
+
+    .flex {
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(4, 1fr);
         justify-content: center;
         gap: 2rem;
 
-        .column{
+        .column {
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 1rem;
-            .number{
+
+            .number {
                 font-size: 58px;
                 font-weight: 700;
                 color: $secondary;
                 position: relative;
             }
-            .info{
+
+            .info {
                 font-size: 20px;
                 font-weight: 500;
                 color: $white;
@@ -298,73 +426,72 @@
     }
 }
 
-// Call to action
-.cta {
-    background-color: rgb(13, 75, 139, 0.8);
-    padding: 3rem 0;
-    position: relative;
+// Why us
+.why-us {
+    padding-bottom: 2.5rem;
 
-    .img-div {
-        width: 23%;
+    .flex {
+        display: flex;
+        justify-content: space-between;
 
-        @media (max-width:992px) {
-            display: none;
+        @media (max-width: 768px) {
+            flex-direction: column-reverse;
+            gap: 3rem;
         }
 
-        img {
-            width: 100%;
-            max-height: 20rem;
-            filter: brightness(70%);
-            z-index: 2;
-            object-fit: contain;
-        }
-    }
+        .img-div {
+            width: 48%;
+            max-height: 40rem;
+            position: relative;
 
-    .info-div {
-        padding-left: 5rem;
-
-        @media (max-width:992px) {
-            padding-left: 0rem;
-        }
-
-        h4 {
-            font-size: 38px;
-            color: $white;
-            margin-bottom: 2rem;
-
-            @media (max-width:992px) {
-                text-align: center;
+            @media (max-width: 768px) {
+                width: 100%;
             }
 
-            @media (max-width:768px) {
-                font-size: 33px;
+            @media (max-width: 576px) {
+                max-height: 25rem;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                background-color: $secondary;
+                width: 50%;
+                height: 50%;
+                left: -2rem;
+                bottom: -2rem;
+                z-index: -1;
             }
         }
-    }
 
-    .bg-img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-        filter: brightness(60%);
+        .info-div {
+            width: 48%;
+            padding-top: 3rem;
 
-    }
+            @media (max-width: 992px) {
+                padding-top: 0;
+            }
 
-    &::after {
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 15px;
-        background-color: $secondary;
-        bottom: 0;
-        left: 0%;
+            @media (max-width: 768px) {
+                width: 100%;
+            }
+
+            ul{
+                li{
+                    padding-bottom: 0.4rem;
+                }
+            }
+        }
     }
 }
 
+// Social Media Ratings
 .ratings-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -421,68 +548,116 @@
     }
 }
 
-// Clients
+// Testimonials
 .testimonials {
-    padding: 4.5rem 0 2.5rem;
-    text-align: center;
-    position: relative;
-    z-index: 99 !important;
+    .testimonial-slider {
+        .column {
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+            padding: 2rem 1.6rem;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            border-radius: 12px;
 
-    .testimonial-bg {
-        z-index: -2;
-    }
+            .quote {
+                width: 4rem;
+            }
 
-    .client-slider {
-        padding: 0;
-        overflow: visible;
+            .data {
+                margin: 1.5rem 0;
+                color: $info;
+            }
 
-        &__block {
-            overflow: auto;
+            .user-info {
+                display: flex;
+                align-items: center;
 
-            .content-div {
-                background-color: $white;
-                width: 50%;
-                margin: 0 auto;
-                padding: 1rem 1.5rem;
-                border-radius: 12px;
-                overflow: visible;
-                margin-top: 3rem;
-                margin-bottom: 3rem;
+                .img-div {
+                    width: 4rem;
+                    border-radius: 50%;
+                    border: 2px solid $secondary;
 
-                @media (max-width: 768px) {
-                    width: 100%;
+                    img {
+                        width: 100%;
+                    }
                 }
-            }
 
-            img {
-                width: 100%;
-                width: 75px;
-                height: 75px;
-                object-fit: cover;
-                border: 3px solid $primary;
-                border-radius: 50%;
-                display: inline-block;
-                margin-top: -5rem;
-                background-color: $white;
-            }
+                .user-details {
+                    padding-left: 1rem;
 
-            p {
-                color: $black;
-                font-size: 1.1rem;
-                margin-top: 1.375rem;
-            }
-
-            .designation {
-                font-size: 1.25rem;
-                font-weight: 600;
-                margin-top: 1.8125rem;
-                color: $warning;
+                    .name {
+                        font-weight: 500;
+                        font-size: 20px;
+                    }
+                }
             }
         }
     }
 }
 
+// How it works
+.how-it-works {
+    padding: 3rem 0;
+    background-color: $primary;
 
+    .flex {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem;
+
+        @media (max-width: 1200px) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 3rem;
+        }
+
+        @media (max-width: 768px) {
+            grid-template-columns: repeat(1, 1fr);
+            gap: 2rem;
+        }
+
+        .column {
+            border-right: 2px solid $white;
+
+            @media (max-width: 768px) {
+                border-right: none;
+                padding-bottom: 1rem;
+                border-bottom: 2px solid $white;
+            }
+
+            .process {
+                color: $secondary;
+                font-size: 22px;
+                font-weight: 500;
+                margin-bottom: 1rem;
+            }
+
+            .action-info {
+                font-size: 15px;
+                margin-bottom: 2rem;
+                color: $white;
+                min-height: 92px;
+            }
+
+            .number {
+                font-size: 40px;
+                font-weight: 600;
+                color: $white;
+            }
+
+            &:nth-of-type(4) {
+                border-right: none;
+
+            }
+
+            &:nth-of-type(2) {
+                @media (max-width: 1200px) {
+                    border-right: none;
+                }
+            }
+        }
+    }
+}
+
+// Gallery
 .gallery {
     .gallery-photos {
         column-count: 3;
@@ -501,6 +676,8 @@
 
             img {
                 height: auto;
+                max-height: 25rem;
+                object-fit: cover;
                 width: 100%;
                 margin-bottom: 1rem;
 
@@ -515,7 +692,7 @@
 
 
 footer {
-    background-color: $white;
+    background-color: $primary;
 
     .footer-bg {
         position: absolute;
@@ -532,7 +709,7 @@ footer {
         a,
         p,
         span {
-            color: $dark;
+            color: $white;
             font-weight: 600;
 
             &:hover {
@@ -541,7 +718,7 @@ footer {
         }
 
         a {
-            text-shadow: rgb(255, 255, 255) 0.1em 0.1em 0.2em;
+            // text-shadow: rgb(255, 255, 255) 0.1em 0.1em 0.2em;
         }
 
         p {
