feat: logo changed

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap');
 
 /* Color Set */
-$primary: #0d4b8b;
-$secondary: #f0751e;
+$primary: #1692da;
+$secondary: #ffb428;
 $warning: #02071d;
 $success: #2299d4;
 $danger: #ff4d00;
