--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -360,7 +360,7 @@
             }
 
             ul {
-                list-style-type: "🖌️";
+                // list-style-type: "🖌️";
                 color: $white;
                 padding-left: 1.3rem;
 
