--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -47,7 +47,7 @@
         }
 
         .info-div {
-            padding: 4rem 0 4rem;
+            padding: 4rem 0 6.2rem;
             width: 50%;
             position: relative;
 
@@ -110,7 +110,6 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                transform: scaleX(-1);
                 z-index: 2;
 
                 @media (max-width: 1200px) {
@@ -354,7 +353,7 @@
                 width: 100%;
             }
 
-            p {
+            .info{
                 color: $white;
                 line-height: 30px;
             }
@@ -461,7 +460,7 @@
             &::after {
                 content: "";
                 position: absolute;
-                background-color: $secondary;
+                background-color: $primary;
                 width: 50%;
                 height: 50%;
                 left: -2rem;
