--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -24,6 +24,26 @@
     }
 }
 
+.inner {
+    background: rgb(12, 93, 173);
+    background: linear-gradient(180deg, rgba(12, 93, 173, 1) 2%, rgba(12, 93, 173, 0.8240546218487395) 47%, rgba(12, 93, 173, 0.7456232492997199) 72%, rgba(12, 93, 173, 0.6755952380952381) 100%) !important;
+
+    .bg-img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        object-fit: cover;
+        z-index: -1;
+
+        @media (min-width: 1200px) {
+            display: block !important;
+        }
+    }
+}
+
+
+
 .nav-hero {
     background-color: $primary;
     position: relative;
@@ -353,7 +373,7 @@
                 width: 100%;
             }
 
-            .info{
+            .info {
                 color: $white;
                 line-height: 30px;
             }
@@ -481,8 +501,8 @@
                 width: 100%;
             }
 
-            ul{
-                li{
+            ul {
+                li {
                     padding-bottom: 0.4rem;
                 }
             }
@@ -751,7 +771,7 @@ footer {
 
         i {
             font-size: 60px;
-            color: $secondary;
+            color: $danger;
             background-color: $creamWhite;
             padding: 2rem;
             border-radius: 50%;
