feat: meta added

--- a/css/index.css
+++ b/css/index.css
@@ -12444,7 +12444,7 @@ nav .nav-link:hover {
     width: 80%;
     height: 20%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) !important;
   }
 }
 @media (max-width: 576px) {
@@ -12901,7 +12901,7 @@ footer .footer-nav p {
 }
 .phone a i {
   font-size: 60px;
-  color: #ffae17;
+  color: #0c5dad;
   background-color: #f7f2ed;
   padding: 2rem;
   border-radius: 50%;
