--- a/css/index.css
+++ b/css/index.css
@@ -36,40 +36,40 @@
   --bs-secondary: #D6F4FF;
   --bs-success: #ad5218;
   --bs-info: #808080;
-  --bs-warning: #E29E21;
-  --bs-danger: #ffae17;
+  --bs-warning: #98ec13;
+  --bs-danger: #98ec13;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 12, 93, 173;
   --bs-secondary-rgb: 214, 244, 255;
   --bs-success-rgb: 173, 82, 24;
   --bs-info-rgb: 128, 128, 128;
-  --bs-warning-rgb: 226, 158, 33;
-  --bs-danger-rgb: 255, 174, 23;
+  --bs-warning-rgb: 152, 236, 19;
+  --bs-danger-rgb: 152, 236, 19;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #052545;
   --bs-secondary-text-emphasis: #566266;
   --bs-success-text-emphasis: #45210a;
   --bs-info-text-emphasis: #333333;
-  --bs-warning-text-emphasis: #5a3f0d;
-  --bs-danger-text-emphasis: #664609;
+  --bs-warning-text-emphasis: #3d5e08;
+  --bs-danger-text-emphasis: #3d5e08;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #cedfef;
   --bs-secondary-bg-subtle: #f7fdff;
   --bs-success-bg-subtle: #efdcd1;
   --bs-info-bg-subtle: #e6e6e6;
-  --bs-warning-bg-subtle: #f9ecd3;
-  --bs-danger-bg-subtle: #ffefd1;
+  --bs-warning-bg-subtle: #eafbd0;
+  --bs-danger-bg-subtle: #eafbd0;
   --bs-light-bg-subtle: #fafcf9;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #9ebede;
   --bs-secondary-border-subtle: #effbff;
   --bs-success-border-subtle: #debaa3;
   --bs-info-border-subtle: #cccccc;
-  --bs-warning-border-subtle: #f3d8a6;
-  --bs-danger-border-subtle: #ffdfa2;
+  --bs-warning-border-subtle: #d6f7a1;
+  --bs-danger-border-subtle: #d6f7a1;
   --bs-light-border-subtle: #e9ecef;
   --bs-dark-border-subtle: #adb5bd;
   --bs-white-rgb: 252, 254, 247;
@@ -122,8 +122,8 @@
   --bs-focus-ring-color: rgba(12, 93, 173, 0.25);
   --bs-form-valid-color: #ad5218;
   --bs-form-valid-border-color: #ad5218;
-  --bs-form-invalid-color: #ffae17;
-  --bs-form-invalid-border-color: #ffae17;
+  --bs-form-invalid-color: #98ec13;
+  --bs-form-invalid-border-color: #98ec13;
 }
 
 [data-bs-theme=dark] {
@@ -146,24 +146,24 @@
   --bs-secondary-text-emphasis: #e6f8ff;
   --bs-success-text-emphasis: #ce9774;
   --bs-info-text-emphasis: #b3b3b3;
-  --bs-warning-text-emphasis: #eec57a;
-  --bs-danger-text-emphasis: #ffce74;
+  --bs-warning-text-emphasis: #c1f471;
+  --bs-danger-text-emphasis: #c1f471;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #021323;
   --bs-secondary-bg-subtle: #2b3133;
   --bs-success-bg-subtle: #231005;
   --bs-info-bg-subtle: #1a1a1a;
-  --bs-warning-bg-subtle: #2d2007;
-  --bs-danger-bg-subtle: #332305;
+  --bs-warning-bg-subtle: #1e2f04;
+  --bs-danger-bg-subtle: #1e2f04;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #323336;
   --bs-primary-border-subtle: #073868;
   --bs-secondary-border-subtle: #809299;
   --bs-success-border-subtle: #68310e;
   --bs-info-border-subtle: #4d4d4d;
-  --bs-warning-border-subtle: #885f14;
-  --bs-danger-border-subtle: #99680e;
+  --bs-warning-border-subtle: #5b8e0b;
+  --bs-danger-border-subtle: #5b8e0b;
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-link-color: #6d9ece;
@@ -1979,13 +1979,13 @@ progress {
 
 .table-warning {
   --bs-table-color: #302c2c;
-  --bs-table-bg: #f9ecd3;
-  --bs-table-border-color: #e5d9c2;
-  --bs-table-striped-bg: #efe2cb;
+  --bs-table-bg: #eafbd0;
+  --bs-table-border-color: #d7e6c0;
+  --bs-table-striped-bg: #e1f1c8;
   --bs-table-striped-color: #302c2c;
-  --bs-table-active-bg: #e5d9c2;
+  --bs-table-active-bg: #d7e6c0;
   --bs-table-active-color: #302c2c;
-  --bs-table-hover-bg: #eadec6;
+  --bs-table-hover-bg: #dcebc4;
   --bs-table-hover-color: #302c2c;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -1993,13 +1993,13 @@ progress {
 
 .table-danger {
   --bs-table-color: #302c2c;
-  --bs-table-bg: #ffefd1;
-  --bs-table-border-color: #eadcc1;
-  --bs-table-striped-bg: #f5e5c9;
+  --bs-table-bg: #eafbd0;
+  --bs-table-border-color: #d7e6c0;
+  --bs-table-striped-bg: #e1f1c8;
   --bs-table-striped-color: #302c2c;
-  --bs-table-active-bg: #eadcc1;
+  --bs-table-active-bg: #d7e6c0;
   --bs-table-active-color: #302c2c;
-  --bs-table-hover-bg: #efe0c5;
+  --bs-table-hover-bg: #dcebc4;
   --bs-table-hover-color: #302c2c;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2818,7 +2818,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23ffae17'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ffae17' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2398ec13'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2398ec13' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2837,7 +2837,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23ffae17'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ffae17' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2398ec13'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2398ec13' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -3022,36 +3022,36 @@ textarea.form-control-lg {
 
 .btn-warning {
   --bs-btn-color: #302c2c;
-  --bs-btn-bg: #E29E21;
-  --bs-btn-border-color: #E29E21;
+  --bs-btn-bg: #98ec13;
+  --bs-btn-border-color: #98ec13;
   --bs-btn-hover-color: #302c2c;
-  --bs-btn-hover-bg: #e6ad42;
-  --bs-btn-hover-border-color: #e5a837;
-  --bs-btn-focus-shadow-rgb: 199, 141, 35;
+  --bs-btn-hover-bg: #a7ef36;
+  --bs-btn-hover-border-color: #a2ee2b;
+  --bs-btn-focus-shadow-rgb: 136, 207, 23;
   --bs-btn-active-color: #302c2c;
-  --bs-btn-active-bg: #e8b14d;
-  --bs-btn-active-border-color: #e5a837;
+  --bs-btn-active-bg: #adf042;
+  --bs-btn-active-border-color: #a2ee2b;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(48, 44, 44, 0.125);
   --bs-btn-disabled-color: #302c2c;
-  --bs-btn-disabled-bg: #E29E21;
-  --bs-btn-disabled-border-color: #E29E21;
+  --bs-btn-disabled-bg: #98ec13;
+  --bs-btn-disabled-border-color: #98ec13;
 }
 
 .btn-danger {
   --bs-btn-color: #302c2c;
-  --bs-btn-bg: #ffae17;
-  --bs-btn-border-color: #ffae17;
+  --bs-btn-bg: #98ec13;
+  --bs-btn-border-color: #98ec13;
   --bs-btn-hover-color: #302c2c;
-  --bs-btn-hover-bg: #ffba3a;
-  --bs-btn-hover-border-color: #ffb62e;
-  --bs-btn-focus-shadow-rgb: 224, 155, 26;
+  --bs-btn-hover-bg: #a7ef36;
+  --bs-btn-hover-border-color: #a2ee2b;
+  --bs-btn-focus-shadow-rgb: 136, 207, 23;
   --bs-btn-active-color: #302c2c;
-  --bs-btn-active-bg: #ffbe45;
-  --bs-btn-active-border-color: #ffb62e;
+  --bs-btn-active-bg: #adf042;
+  --bs-btn-active-border-color: #a2ee2b;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(48, 44, 44, 0.125);
   --bs-btn-disabled-color: #302c2c;
-  --bs-btn-disabled-bg: #ffae17;
-  --bs-btn-disabled-border-color: #ffae17;
+  --bs-btn-disabled-bg: #98ec13;
+  --bs-btn-disabled-border-color: #98ec13;
 }
 
 .btn-light {
@@ -3157,36 +3157,36 @@ textarea.form-control-lg {
 }
 
 .btn-outline-warning {
-  --bs-btn-color: #E29E21;
-  --bs-btn-border-color: #E29E21;
+  --bs-btn-color: #98ec13;
+  --bs-btn-border-color: #98ec13;
   --bs-btn-hover-color: #302c2c;
-  --bs-btn-hover-bg: #E29E21;
-  --bs-btn-hover-border-color: #E29E21;
-  --bs-btn-focus-shadow-rgb: 226, 158, 33;
+  --bs-btn-hover-bg: #98ec13;
+  --bs-btn-hover-border-color: #98ec13;
+  --bs-btn-focus-shadow-rgb: 152, 236, 19;
   --bs-btn-active-color: #302c2c;
-  --bs-btn-active-bg: #E29E21;
-  --bs-btn-active-border-color: #E29E21;
+  --bs-btn-active-bg: #98ec13;
+  --bs-btn-active-border-color: #98ec13;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(48, 44, 44, 0.125);
-  --bs-btn-disabled-color: #E29E21;
+  --bs-btn-disabled-color: #98ec13;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #E29E21;
+  --bs-btn-disabled-border-color: #98ec13;
   --bs-gradient: none;
 }
 
 .btn-outline-danger {
-  --bs-btn-color: #ffae17;
-  --bs-btn-border-color: #ffae17;
+  --bs-btn-color: #98ec13;
+  --bs-btn-border-color: #98ec13;
   --bs-btn-hover-color: #302c2c;
-  --bs-btn-hover-bg: #ffae17;
-  --bs-btn-hover-border-color: #ffae17;
-  --bs-btn-focus-shadow-rgb: 255, 174, 23;
+  --bs-btn-hover-bg: #98ec13;
+  --bs-btn-hover-border-color: #98ec13;
+  --bs-btn-focus-shadow-rgb: 152, 236, 19;
   --bs-btn-active-color: #302c2c;
-  --bs-btn-active-bg: #ffae17;
-  --bs-btn-active-border-color: #ffae17;
+  --bs-btn-active-bg: #98ec13;
+  --bs-btn-active-border-color: #98ec13;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(48, 44, 44, 0.125);
-  --bs-btn-disabled-color: #ffae17;
+  --bs-btn-disabled-color: #98ec13;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #ffae17;
+  --bs-btn-disabled-border-color: #98ec13;
   --bs-gradient: none;
 }
 
@@ -6777,12 +6777,12 @@ textarea.form-control-lg {
 
 .text-bg-warning {
   color: #302c2c !important;
-  background-color: RGBA(226, 158, 33, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(152, 236, 19, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-danger {
   color: #302c2c !important;
-  background-color: RGBA(255, 174, 23, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(152, 236, 19, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
@@ -6836,8 +6836,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-warning-rgb), var(--bs-link-underline-opacity, 1));
 }
 .link-warning:hover, .link-warning:focus {
-  color: RGBA(232, 177, 77, var(--bs-link-opacity, 1));
-  text-decoration-color: RGBA(232, 177, 77, var(--bs-link-underline-opacity, 1));
+  color: RGBA(173, 240, 66, var(--bs-link-opacity, 1));
+  text-decoration-color: RGBA(173, 240, 66, var(--bs-link-underline-opacity, 1));
 }
 
 .link-danger {
@@ -6845,8 +6845,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-danger-rgb), var(--bs-link-underline-opacity, 1));
 }
 .link-danger:hover, .link-danger:focus {
-  color: RGBA(255, 190, 69, var(--bs-link-opacity, 1));
-  text-decoration-color: RGBA(255, 190, 69, var(--bs-link-underline-opacity, 1));
+  color: RGBA(173, 240, 66, var(--bs-link-opacity, 1));
+  text-decoration-color: RGBA(173, 240, 66, var(--bs-link-underline-opacity, 1));
 }
 
 .link-light {
@@ -11991,7 +11991,24 @@ p {
 }
 
 .btn-danger {
-  color: #ffffff;
+  color: #fff;
+  border: 2px solid #98ec13;
+  transition: all ease 0.3s;
+}
+.btn-danger:hover {
+  background-color: transparent;
+  color: #98ec13;
+  border: 2px solid #98ec13;
+}
+
+.btn-light {
+  border: 2px solid #fcfef7;
+  transition: all ease 0.3s;
+}
+.btn-light:hover {
+  background-color: transparent;
+  color: #212529;
+  border: 2px solid #fcfef7;
 }
 
 .btn-success {
@@ -12079,14 +12096,28 @@ nav .navbar-brand img {
   object-fit: contain;
 }
 nav .nav-link {
-  color: #fcfef7;
+  color: #0c5dad;
   font-size: 1.2rem;
   font-weight: 500;
   margin: 0 1.5rem;
   z-index: 3;
+  position: relative;
+}
+nav .nav-link::after {
+  content: "";
+  position: absolute;
+  background-color: #0c5dad;
+  left: 0;
+  bottom: -0.2rem;
+  width: 0%;
+  height: 3px;
+  transition: all ease 0.4s;
 }
 nav .nav-link:hover {
-  color: #cfcaca;
+  color: #0c5dad;
+}
+nav .nav-link:hover::after {
+  width: 100%;
 }
 @media (max-width: 1400px) {
   nav .nav-link {
@@ -12192,7 +12223,7 @@ nav .nav-link:hover {
   width: 50%;
   height: 200%;
   position: absolute;
-  background-color: #D6F4FF;
+  background-color: #0c5dad;
   top: -20%;
   right: -5%;
   transform: rotate(45deg);
@@ -12228,9 +12259,24 @@ nav .nav-link:hover {
     display: block !important;
   }
 }
+.inner h1, .inner .h1 {
+  color: #fcfef7 !important;
+}
+.inner .nav-link {
+  color: #fcfef7;
+}
+.inner .nav-link::after {
+  background-color: #fcfef7;
+}
+.inner .nav-link:hover {
+  color: #fcfef7 !important;
+}
+.inner .nav-link:hover::after {
+  width: 100%;
+}
 
 .nav-hero {
-  background-color: #0c5dad;
+  background-color: #D6F4FF;
   position: relative;
 }
 .nav-hero .bg-img {
@@ -12275,8 +12321,8 @@ nav .nav-link:hover {
 .nav-hero .hero .info-div h1, .nav-hero .hero .info-div .h1 {
   font-size: 50px;
   margin-bottom: 2.5rem;
-  color: #fcfef7;
-  text-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  color: #0c5dad;
+  text-shadow: 0 0 8px rgba(12, 93, 173, 0.4);
   z-index: 3;
 }
 @media (max-width: 768px) {
@@ -12291,9 +12337,9 @@ nav .nav-link:hover {
 }
 .nav-hero .hero .info-div p {
   font-size: 19px;
-  color: #fcfef7;
+  color: #0c5dad;
   width: 100%;
-  text-shadow: black 0.1em 0.1em 0.2em;
+  text-shadow: 0 0 8px rgba(12, 93, 173, 0.3);
   z-index: 3;
 }
 @media (max-width: 768px) {
