--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@
   --bs-success: #ad5218;
   --bs-info: #808080;
   --bs-warning: #98ec13;
-  --bs-danger: #98ec13;
+  --bs-danger: #86d10e;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 12, 93, 173;
@@ -45,7 +45,7 @@
   --bs-success-rgb: 173, 82, 24;
   --bs-info-rgb: 128, 128, 128;
   --bs-warning-rgb: 152, 236, 19;
-  --bs-danger-rgb: 152, 236, 19;
+  --bs-danger-rgb: 134, 209, 14;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #052545;
@@ -53,7 +53,7 @@
   --bs-success-text-emphasis: #45210a;
   --bs-info-text-emphasis: #333333;
   --bs-warning-text-emphasis: #3d5e08;
-  --bs-danger-text-emphasis: #3d5e08;
+  --bs-danger-text-emphasis: #365406;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #cedfef;
@@ -61,7 +61,7 @@
   --bs-success-bg-subtle: #efdcd1;
   --bs-info-bg-subtle: #e6e6e6;
   --bs-warning-bg-subtle: #eafbd0;
-  --bs-danger-bg-subtle: #eafbd0;
+  --bs-danger-bg-subtle: #e7f6cf;
   --bs-light-bg-subtle: #fafcf9;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #9ebede;
@@ -69,7 +69,7 @@
   --bs-success-border-subtle: #debaa3;
   --bs-info-border-subtle: #cccccc;
   --bs-warning-border-subtle: #d6f7a1;
-  --bs-danger-border-subtle: #d6f7a1;
+  --bs-danger-border-subtle: #cfed9f;
   --bs-light-border-subtle: #e9ecef;
   --bs-dark-border-subtle: #adb5bd;
   --bs-white-rgb: 252, 254, 247;
@@ -122,8 +122,8 @@
   --bs-focus-ring-color: rgba(12, 93, 173, 0.25);
   --bs-form-valid-color: #ad5218;
   --bs-form-valid-border-color: #ad5218;
-  --bs-form-invalid-color: #98ec13;
-  --bs-form-invalid-border-color: #98ec13;
+  --bs-form-invalid-color: #86d10e;
+  --bs-form-invalid-border-color: #86d10e;
 }
 
 [data-bs-theme=dark] {
@@ -147,7 +147,7 @@
   --bs-success-text-emphasis: #ce9774;
   --bs-info-text-emphasis: #b3b3b3;
   --bs-warning-text-emphasis: #c1f471;
-  --bs-danger-text-emphasis: #c1f471;
+  --bs-danger-text-emphasis: #b6e36e;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #021323;
@@ -155,7 +155,7 @@
   --bs-success-bg-subtle: #231005;
   --bs-info-bg-subtle: #1a1a1a;
   --bs-warning-bg-subtle: #1e2f04;
-  --bs-danger-bg-subtle: #1e2f04;
+  --bs-danger-bg-subtle: #1b2a03;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #323336;
   --bs-primary-border-subtle: #073868;
@@ -163,7 +163,7 @@
   --bs-success-border-subtle: #68310e;
   --bs-info-border-subtle: #4d4d4d;
   --bs-warning-border-subtle: #5b8e0b;
-  --bs-danger-border-subtle: #5b8e0b;
+  --bs-danger-border-subtle: #507d08;
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-link-color: #6d9ece;
@@ -1993,13 +1993,13 @@ progress {
 
 .table-danger {
   --bs-table-color: #302c2c;
-  --bs-table-bg: #eafbd0;
-  --bs-table-border-color: #d7e6c0;
-  --bs-table-striped-bg: #e1f1c8;
+  --bs-table-bg: #e7f6cf;
+  --bs-table-border-color: #d5e2bf;
+  --bs-table-striped-bg: #deecc7;
   --bs-table-striped-color: #302c2c;
-  --bs-table-active-bg: #d7e6c0;
+  --bs-table-active-bg: #d5e2bf;
   --bs-table-active-color: #302c2c;
-  --bs-table-hover-bg: #dcebc4;
+  --bs-table-hover-bg: #d9e7c3;
   --bs-table-hover-color: #302c2c;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2818,7 +2818,7 @@ textarea.form-control-lg {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: var(--bs-form-invalid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2398ec13'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2398ec13' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2386d10e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2386d10e' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -2837,7 +2837,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-invalid-border-color);
 }
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2398ec13'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2398ec13' stroke='none'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%2386d10e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%2386d10e' stroke='none'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -3039,19 +3039,19 @@ textarea.form-control-lg {
 
 .btn-danger {
   --bs-btn-color: #302c2c;
-  --bs-btn-bg: #98ec13;
-  --bs-btn-border-color: #98ec13;
+  --bs-btn-bg: #86d10e;
+  --bs-btn-border-color: #86d10e;
   --bs-btn-hover-color: #302c2c;
-  --bs-btn-hover-bg: #a7ef36;
-  --bs-btn-hover-border-color: #a2ee2b;
-  --bs-btn-focus-shadow-rgb: 136, 207, 23;
+  --bs-btn-hover-bg: #98d832;
+  --bs-btn-hover-border-color: #92d626;
+  --bs-btn-focus-shadow-rgb: 121, 184, 19;
   --bs-btn-active-color: #302c2c;
-  --bs-btn-active-bg: #adf042;
-  --bs-btn-active-border-color: #a2ee2b;
+  --bs-btn-active-bg: #9eda3e;
+  --bs-btn-active-border-color: #92d626;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(48, 44, 44, 0.125);
   --bs-btn-disabled-color: #302c2c;
-  --bs-btn-disabled-bg: #98ec13;
-  --bs-btn-disabled-border-color: #98ec13;
+  --bs-btn-disabled-bg: #86d10e;
+  --bs-btn-disabled-border-color: #86d10e;
 }
 
 .btn-light {
@@ -3174,19 +3174,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-danger {
-  --bs-btn-color: #98ec13;
-  --bs-btn-border-color: #98ec13;
+  --bs-btn-color: #86d10e;
+  --bs-btn-border-color: #86d10e;
   --bs-btn-hover-color: #302c2c;
-  --bs-btn-hover-bg: #98ec13;
-  --bs-btn-hover-border-color: #98ec13;
-  --bs-btn-focus-shadow-rgb: 152, 236, 19;
+  --bs-btn-hover-bg: #86d10e;
+  --bs-btn-hover-border-color: #86d10e;
+  --bs-btn-focus-shadow-rgb: 134, 209, 14;
   --bs-btn-active-color: #302c2c;
-  --bs-btn-active-bg: #98ec13;
-  --bs-btn-active-border-color: #98ec13;
+  --bs-btn-active-bg: #86d10e;
+  --bs-btn-active-border-color: #86d10e;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(48, 44, 44, 0.125);
-  --bs-btn-disabled-color: #98ec13;
+  --bs-btn-disabled-color: #86d10e;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #98ec13;
+  --bs-btn-disabled-border-color: #86d10e;
   --bs-gradient: none;
 }
 
@@ -6782,7 +6782,7 @@ textarea.form-control-lg {
 
 .text-bg-danger {
   color: #302c2c !important;
-  background-color: RGBA(152, 236, 19, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(134, 209, 14, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
@@ -6845,8 +6845,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-danger-rgb), var(--bs-link-underline-opacity, 1));
 }
 .link-danger:hover, .link-danger:focus {
-  color: RGBA(173, 240, 66, var(--bs-link-opacity, 1));
-  text-decoration-color: RGBA(173, 240, 66, var(--bs-link-underline-opacity, 1));
+  color: RGBA(158, 218, 62, var(--bs-link-opacity, 1));
+  text-decoration-color: RGBA(158, 218, 62, var(--bs-link-underline-opacity, 1));
 }
 
 .link-light {
@@ -11990,15 +11990,25 @@ p {
   transition: width 1000ms;
 }
 
+.btn-outline-danger {
+  border: 2px solid #7fc70b;
+  color: #7fc70b;
+  transition: all ease 0.35s;
+}
+.btn-outline-danger:hover {
+  background-color: #86d10e;
+  color: #fff;
+}
+
 .btn-danger {
   color: #fff;
-  border: 2px solid #98ec13;
+  border: 2px solid #86d10e;
   transition: all ease 0.3s;
 }
 .btn-danger:hover {
   background-color: transparent;
-  color: #98ec13;
-  border: 2px solid #98ec13;
+  color: #86d10e;
+  border: 2px solid #86d10e;
 }
 
 .btn-light {
