--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -23,6 +23,10 @@ nav {
     z-index: 3;
     position: relative;
 
+    @media (max-width: 1200px) {
+      color: $white;
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -32,11 +36,21 @@ nav {
       width: 0%;
       height: 3px;
       transition: all ease 0.4s;
+
+      @media (max-width: 1200px) {
+        background-color: $white;
+      }
+
     }
 
-    &:hover{
+    &:hover {
       color: $primary;
-      &::after{
+
+      @media (max-width: 1200px) {
+        color: $white;
+      }
+
+      &::after {
         width: 100%;
       }
     }
